tests/e2e/cases/multiple-errors.err
Error: multiple-errors.clawr:1:11:Unknown identifier 'nope'
Error: multiple-errors.clawr:2:11:Unknown identifier 'alsoNope'
