tests/e2e/cases/multiple-errors.clawr
const a = nope
const b = alsoNope
